# HardenedSteel

./: .gitattributes  .gitignore  LICENSE  License.md  README.md  Readme.md  pyproject.toml
.github/workflows/: codeql.yml  dependencies.yml  package.yml  publish.yml
HardenedSteel/: Readme.md  __init__.py
HardenedSteel/configuration/: __init__.py
HardenedSteel/configuration/singletons/: SingletonSystenRandom.py  __init__.py
HardenedSteel/facades/: __init__.py
HardenedSteel/facades/binaries/: __init__.py  random_binary_generation.py
HardenedSteel/facades/booleans/: __init__.py  random_boolean_generation.py
HardenedSteel/facades/integers/: __init__.py  random_number_generation.py  states.py
HardenedSteel/facades/texts/: __init__.py  random_text_generation.py
HardenedSteel/facades/texts/characters/: __init__.py  ranges.py
HardenedSteel/facades/types/: __init__.py  by_types.py  type_identify.py
HardenedSteel/globals/: __init__.py
HardenedSteel/globals/singletons/: SingletonSystenRandom.py  __init__.py
HardenedSteel/globals/vars/: __init__.py  bits.py  integer.py
HardenedSteel/objects/: __init__.py
HardenedSteel/objects/counters/: __init__.py  counter.py  limit.py
steel/: __init__.py
steel/facades/: __init__.py
steel/facades/booleans/: __init__.py  random_boolean_generation.py
steel/facades/integers/: __init__.py  random_number_generation.py
steel/facades/texts/: __init__.py  exceptions.py  random_text_generation.py  random_text_generator.py
steel/globals/: __init__.py
steel/globals/singletons/: __init__.py
steel/globals/vars/: __init__.py  integer.py
tests/: Readme.md  test_default.py  test_singleton.py
tests/facades/: __init__.py  test_boolean.py  test_by_types.py  test_integer.py  test_text_facade.py
tests/objects/: test_counter_iteration.py
(+2 files in other folders)
