[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-steel"
version = "0.0.1"
authors = [
  { name="IO Jægers", email="support@cloud.iojaegers.com" },
  { name="Kent Madsen", email="kent.vejrup.madsen@outlook.com" },
]
description = "Framework for helping to test projects with the generation of data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IO-Jaegers/Steel"
"Issues" = "https://github.com/IO-Jaegers/Steel/issues"
"Wiki" = "https://github.com/IO-Jaegers/Steel/wiki"
