[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardened-steel"
version = "0.0.6-dev"
authors = [
  { name="IO Jægers", email="support@cloud.iojaegers.com" },
  { name="Kent Madsen", email="kent.vejrup.madsen@outlook.com" },
]
description = "Framework for helping to test projects with the generation of random data during TDD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IO-Jaegers/Steel"
"Issues" = "https://github.com/IO-Jaegers/Steel/issues"
"Wiki" = "https://github.com/IO-Jaegers/Steel/wiki"
"Releases" = "https://pypi.org/manage/project/hardened-steel/releases/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["HardenedSteel*"]
exclude = ["docs*", "tests*"]